<resources>
    <string name="app_name">CryptChat</string>

    <string name="menu_title_chats">Chats</string>
    <string name="menu_title_people">People</string>
    <string name="title_new_chat">New Chat</string>
    <string name="title_profile">Profile</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_app_description">The Chat app using Cryptography</string>
    <string name="btn_start">Start Messaging</string>
    <string name="tv_enter_phone">Enter your phone number</string>
    <string name="tv_enter_name">Enter your name</string>
    <string name="tv_country_burma">Myanmar [Burma]</string>
    <string name="btn_continue">Continue</string>
    <string name="hint_first_name">First Name (Required)</string>
    <string name="hint_last_name">Last Name (Optional)</string>
    <string name="btn_save">Save</string>
    <string name="tv_create_pin">Create your PIN</string>
    <string name="tv_pin_description">PINs keep information stored with CryptChat encrypted so only you can access it. Your profile, settings, and contacts will restore when you reinstall. You won\'t need your PIN to open the app.</string>
    <string name="hint_pin">PIN must be at least 4 digits</string>
    <string name="btn_next">Next</string>
    <string name="tv_confirm_pin">Confirm your PIN</string>
    <string name="tv_confirm_pin_description">Enter the PIN you just created</string>
    <string name="title_otp">Activate your account</string>
    <string name="tv_otp_description">"We've sent a code by SMS to phone number "</string>
    <string name="hint_otp">Your 6-digit code</string>
    <string name="btn_verify">Verify</string>
    <string name="title_profile_edit">Profile Edit</string>
    <string name="btn_edit">Edit</string>
    <string name="text_to_replace">*****</string>
    <string name="phone_to_replace">09*******</string>
</resources>