<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.StartedFragment"
    android:paddingVertical="@dimen/margin_xxlarge"
    android:paddingHorizontal="@dimen/margin_xlarge">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="@dimen/large_size_profile_img"
        android:layout_height="@dimen/large_size_profile_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:src="@drawable/logo_512" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_heading_2x"
        android:layout_below="@id/ivAppLogo"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_1"
        android:text="@string/tv_app_description"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_regular_3x"
        android:layout_below="@id/tvAppName"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_xxlarge"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/btn_start"
        android:textColor="@color/colorPrimaryGray"
        android:textSize="@dimen/text_regular_2x" />


</RelativeLayout>