<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.ProfileActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/margin_medium_1">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_profile"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_heading_1x" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_card_medium"
            android:paddingVertical="@dimen/margin_medium_1"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/margin_medium_2"
            android:text="@string/btn_edit"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/text_regular_2x" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="@dimen/large_size_profile_img"
            android:layout_height="@dimen/large_size_profile_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/btn_profile_size"
            android:src="@drawable/person_128"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/text_to_replace"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark2"
            android:textSize="@dimen/text_heading_2x"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_xxlarge"
            android:text="@string/phone_to_replace"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_regular_3x" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>