<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OtpFragment"
    android:paddingHorizontal="@dimen/margin_xlarge"
    android:paddingVertical="@dimen/margin_xxlarge">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_otp"
        android:textSize="@dimen/text_heading_1x"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitleOtp"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:text="OTP Description"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_regular_2x"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescription"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:background="@color/white"
        android:inputType="numberDecimal"
        android:paddingHorizontal="@dimen/margin_medium"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark2"
        android:textSize="@dimen/text_heading_2x" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_view"
        android:layout_below="@id/etOtp"
        android:layout_alignStart="@id/etOtp"
        android:layout_alignEnd="@id/etOtp"
        android:background="@color/colorDisabledGray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHintOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_otp"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/colorPrimaryLight"
        android:textAlignment="center"
        android:layout_below="@id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_xxlarge"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/btn_verify"
        android:textColor="@color/colorPrimaryGray"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold"/>

</RelativeLayout>