<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ProfileEditActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/margin_medium_1">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProfileEditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_profile_edit"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_heading_1x" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_card_medium"
            android:paddingVertical="@dimen/margin_medium_1"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_medium_3">

        <FrameLayout
            android:id="@+id/flProfileImage"
            android:layout_width="@dimen/large_size_profile_img"
            android:layout_height="@dimen/large_size_profile_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/btn_profile_size">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/person_128"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_camera_alt_24"
                android:layout_gravity="bottom|end"/>
        </FrameLayout>



        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:background="@color/white"
            android:hint="@string/hint_first_name"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/margin_medium"
            android:textColor="@color/colorPrimaryDark2"
            android:textColorHint="@color/colorDisabledGray"
            android:textSize="@dimen/text_regular_2x" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view"
            android:layout_marginVertical="@dimen/margin_medium"
            android:background="@color/colorDisabledGray" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_medium"
            android:background="@color/white"
            android:hint="@string/hint_last_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark2"
            android:textColorHint="@color/colorDisabledGray"
            android:textSize="@dimen/text_regular_2x"
            android:layout_marginTop="@dimen/margin_medium_2"/>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view"
            android:layout_marginVertical="@dimen/margin_medium"
            android:background="@color/colorDisabledGray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_xxlarge"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/btn_save"
            android:textColor="@color/colorPrimaryGray"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_xxlarge"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>